# zccache

./: .clippy.toml  .dockerignore  .env  .gitignore  BUGS.md  CLAUDE.md  CODEX.md  Cargo.toml  DONE.md  Dockerfile.cc-test  Dockerfile.jobserver-test  ISSUES.md  NEXT_STEPS.md  PERF.md  PLAN.md  README.md  _cargo  _rustc  _rustfmt  action.yml  bump  ci.py  ci.sh  history.jsonl  index.html  install  install.ps1  install.py  install.sh  latest.json  lint  perf  publish  pyproject.toml  run  run.bat  run.py  rust-toolchain.toml  setup.py  test
bench/persist-rust-project/: Cargo.toml  README.md
bench/persist-rust-project/src/: README.md  main.rs
crates/zccache-artifact/: Cargo.toml  README.md
crates/zccache-artifact/src/: README.md  kv.rs  lib.rs  rust_plan.rs  rust_plan_manifest.proto  store.rs
crates/zccache-artifact/tests/: README.md  kv_stress.rs
crates/zccache-audit/: Cargo.toml  README.md
crates/zccache-audit/src/: README.md
crates/zccache-ci/: Cargo.toml  README.md
crates/zccache-ci/src/: lib.rs  main.rs
crates/zccache-ci/tests/: README.md  timeout_and_progress.rs
crates/zccache-cli/: Cargo.toml  README.md  build.rs
crates/zccache-cli-core/: Cargo.toml  README.md  build.rs
crates/zccache-cli-core/src/: README.md  lib.rs
crates/zccache-cli/benches/: README.md
crates/zccache-cli/src/: README.md  defender.rs  lib.rs  main.rs  python.rs  snapshot_fp.rs  spawn_daemon_windows.rs  symbols.rs
crates/zccache-cli/tests/: README.md  cache_root.rs  cli_crash_test.rs  daemon_start.rs  ino_convert.rs  installers.rs  kv.rs  rust_plan_lifecycle.rs
crates/zccache-compile-trace/: Cargo.toml  README.md
crates/zccache-compile-trace/src/: README.md  lib.rs
crates/zccache-compiler/: Cargo.toml  README.md
crates/zccache-compiler/src/: README.md  arduino.rs  detect.rs  lib.rs  output_policy.rs  parse.rs  parse_archiver.rs  parse_linker.rs  parse_msvc.rs  parse_rustc.rs  parse_rustfmt.rs  response_file.rs  strict_paths.rs
crates/zccache-compiler/tests/: README.md  clang_cl_classification.rs  response_file_adversarial.rs
crates/zccache-core/: Cargo.toml  README.md
crates/zccache-core/src/: config.rs  crash.rs  error.rs  lib.rs  lifecycle.rs  path.rs  version.rs
crates/zccache-daemon/: Cargo.toml  README.md
crates/zccache-daemon-core/: Cargo.toml  README.md
crates/zccache-daemon-core/src/: README.md  audit_writer.rs  embedded.rs  lib.rs
crates/zccache-daemon/benches/: README.md  write_payloads.rs
crates/zccache-daemon/src/: README.md  compile_journal.rs  crash.rs  event_log.rs  eviction.rs  fingerprint.rs  lib.rs  lifecycle.rs  main.rs  process.rs  server.rs  side_effect.rs  stats.rs  trampoline.rs
crates/zccache-daemon/tests/: README.md  adversarial_corner_cases.rs  adversarial_mutations.rs  cli_flow_test.rs  cold_path_profile_test.rs  crash_minidump_test.rs  cwd_release.rs  depgraph_persistence_test.rs  depgraph_warm_classify_test.rs  dll_cache_test.rs  exe_overwrite.rs  fingerprint_test.rs  integration_test.rs  lineage_propagation.rs  link_cache_test.rs  ninja_rebuild_test.rs  pch_cache_test.rs  perf_artifact_fallback_test.rs  perf_bench_test.rs  perf_test.rs  persist_pool_bench.rs  profile_multi_test.rs  profile_test.rs  response_file_cache.rs  rustc_adversarial_test.rs  rustc_cache_test.rs  rustc_issue_210_async_populate_test.rs  session_stats_test.rs  stdio_detach.rs  stress_test.rs  watcher_adversarial.rs
crates/zccache-depgraph/: Cargo.toml  README.md
crates/zccache-depgraph/benches/: README.md  scan_recursive.rs
crates/zccache-depgraph/src/: README.md  args.rs  compile_commands.rs  context.rs  depfile.rs  env_deps.rs  graph.rs  lib.rs  msvc_args.rs  rustc_args.rs  scanner.rs  search_paths.rs  session.rs  show_includes.rs  snapshot.rs  system_includes.rs  watcher_support.rs
crates/zccache-depgraph/tests/: README.md  depfile_integration_test.rs  stress_test.rs
crates/zccache-download/: Cargo.toml  README.md
crates/zccache-download-cli/: Cargo.toml  README.md
crates/zccache-download-cli/src/: main.rs
crates/zccache-download-client/: Cargo.toml
crates/zccache-download-client/src/: README.md  artifact.rs  lib.rs
crates/zccache-download-daemon/: Cargo.toml  README.md
crates/zccache-download-daemon/src/: lib.rs  main.rs
crates/zccache-download-protocol/: Cargo.toml  README.md
crates/zccache-download-protocol/src/: README.md  daemon_mgmt.rs  lib.rs
crates/zccache-download/src/: README.md  lib.rs
crates/zccache-fingerprint/: Cargo.toml  README.md  build.rs  pyproject.toml
crates/zccache-fingerprint/benches/: README.md
crates/zccache-fingerprint/python/: README.md
crates/zccache-fingerprint/src/: README.md  error.rs  file_lock.rs  hash_cache.rs  lib.rs  main.rs  persist.rs  python.rs  scan.rs  two_layer.rs
crates/zccache-fingerprint/tests/: README.md
crates/zccache-fscache/: Cargo.toml  README.md
crates/zccache-fscache/src/: cache_system.rs  clock.rs  lib.rs  metadata.rs  persistence.rs  verify.rs
crates/zccache-fscache/tests/: README.md  persistence_perf_test.rs
crates/zccache-gha/: Cargo.toml  README.md
crates/zccache-gha/src/: README.md  client.rs
crates/zccache-hash/: Cargo.toml  README.md
crates/zccache-hash/benches/: README.md  hashing.rs
crates/zccache-hash/src/: cache_key.rs  lib.rs  link_cache_key.rs
crates/zccache-ipc/: Cargo.toml  README.md
crates/zccache-ipc/src/: README.md  broker.rs  error.rs  lib.rs  manifest.rs  mod_tests.rs  probe.rs  transport.rs
crates/zccache-ipc/tests/: README.md  timeout.rs
crates/zccache-monocrate/: Cargo.toml  README.md  build.rs
crates/zccache-monocrate/benches/: README.md  hashing.rs  persist_payloads.rs  read_outputs.rs  warm_restore.rs
crates/zccache-monocrate/src/: README.md  lib.rs
crates/zccache-monocrate/tests/: README.md  artifact_kv_stress.rs  ci_timeout_and_progress.rs  cli_cache_root.rs  cli_cli_crash_test.rs  (+44 more)
crates/zccache-protocol/: Cargo.toml  README.md  build.rs
crates/zccache-symbols/: Cargo.toml  README.md
crates/zccache-test-support/: Cargo.toml  README.md
crates/zccache-watcher/: Cargo.toml  README.md  pyproject.toml
(+1219 files in other folders)
