[workspace]
resolver = "2"
members = [
    "crates/zccache-core",
    "crates/zccache-hash",
    "crates/zccache-protocol",
    "crates/zccache-download-protocol",
    "crates/zccache-download",
    "crates/zccache-download-client",
    "crates/zccache-download-daemon",
    "crates/zccache-download-cli",
    "crates/zccache-fscache",
    "crates/zccache-artifact",
    "crates/zccache-depgraph",
    "crates/zccache-watcher",
    "crates/zccache-compiler",
    "crates/zccache-ipc",
    "crates/zccache-daemon",
    "crates/zccache-cli",
    "crates/zccache-test-support",
    "crates/zccache-ci",
    "crates/zccache-fingerprint",
    "crates/zccache-gha",
    "crates/zccache-symbols",
]
exclude = [
    "dylints/ban_std_pathbuf",
    "dylints/ban_unrooted_tempdir",
    "dylints/ban_raw_subprocess_in_daemon",
]

[workspace.package]
version = "1.8.2"
edition = "2021"
rust-version = "1.94.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zackees/zccache"
homepage = "https://github.com/zackees/zccache"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive", "rc"] }
bincode = "1"
blake3 = { version = "1", features = ["pure"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
redb = "2"
clang = { version = "2", features = ["runtime"] }
notify = "7"
memmap2 = "0.9"
tempfile = "3"
rayon = "1"
jwalk = "0.8"
bytes = "1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "stream"] }
tokio-util = "0.7"
filetime = "0.2"
fs2 = "0.4"
serde_json = "1"
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"
ruzstd = "0.7"
lzma-rs = "0.3"
sevenz-rust = "0.6"
rkyv = { version = "0.7", features = ["validation"] }
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"] }
mimalloc = "0.1"
running-process-core = "3.3"
zccache-core = { path = "crates/zccache-core" }
zccache-hash = { path = "crates/zccache-hash" }
zccache-protocol = { path = "crates/zccache-protocol" }
zccache-download-protocol = { path = "crates/zccache-download-protocol" }
zccache-download = { path = "crates/zccache-download" }
zccache-download-client = { path = "crates/zccache-download-client" }
zccache-download-daemon = { path = "crates/zccache-download-daemon" }
zccache-fscache = { path = "crates/zccache-fscache" }
zccache-artifact = { path = "crates/zccache-artifact" }
zccache-depgraph = { path = "crates/zccache-depgraph" }
zccache-watcher = { path = "crates/zccache-watcher" }
zccache-compiler = { path = "crates/zccache-compiler" }
zccache-ipc = { path = "crates/zccache-ipc" }
zccache-daemon = { path = "crates/zccache-daemon" }
zccache-cli = { path = "crates/zccache-cli" }
zccache-test-support = { path = "crates/zccache-test-support" }
zccache-fingerprint = { path = "crates/zccache-fingerprint" }
zccache-gha = { path = "crates/zccache-gha" }
zccache-symbols = { path = "crates/zccache-symbols" }

# Vendored notify with fixes for Windows ReadDirectoryChangesW:
# 1. Detect buffer overflow (bytes_written == 0) and report as error
# 2. Report start_read failure (watcher silently dying) as error
[patch.crates-io]
notify = { path = "vendor/notify" }

[workspace.metadata.dylint]
libraries = [{ path = "dylints/*" }]

# The workspace MSRV tracks rust-toolchain.toml. Lint configuration is also
# enforced via CI clippy flags.
#
# [workspace.lints.rust]
# unsafe_code = "deny"
# missing_debug_implementations = "warn"
#
# [workspace.lints.clippy]
# all = { level = "warn", priority = -1 }
# pedantic = { level = "warn", priority = -1 }
# nursery = { level = "warn", priority = -1 }
# unwrap_used = "warn"

# Keep just enough debug info for readable stack traces (function names +
# source-line numbers) while dropping the DWARF variable/type tables that
# dominate `target/` size. Trade-off: in-process debuggers like rust-gdb lose
# variable inspection. Override locally with `CARGO_PROFILE_DEV_DEBUG=full
# cargo …` when you need full debug info for a single build.
#
# `profile.test` inherits from `profile.dev`, so CI test compiles pick this up
# too. Why this matters here: `target/` ships through setup-soldr's post-job
# cache tar on every Windows runner, and DWARF bytes are pure dead weight in
# that pipeline.
[profile.dev]
debug = "line-tables-only"

# Release builds keep only `file:line` debug info — enough for a panic
# backtrace or a profiler to attribute a sample to source, and nothing
# else (no DWARF variable/type tables). The info is split into a
# per-binary sidecar so the shipped binary stays slim:
#   - Linux:        `<binary>.dwp`  (DWARF package, requires rust-dwp)
#   - macOS:        `<binary>.dSYM/` (dsymutil bundle)
#   - Windows MSVC: `<binary>.pdb`  (always emitted by msvc, kept explicit)
# The release workflow stages each sidecar alongside its binary
# (`.github/workflows/release.yml` — "Stage debug sidecars" step), and
# `zccache symbols install` lazily downloads the matching sidecar at
# runtime when a backtrace needs symbolicating.
# Override with `CARGO_PROFILE_RELEASE_DEBUG=none cargo build --release`
# for a smallest-possible binary when even line info isn't needed.
[profile.release]
debug = "line-tables-only"
split-debuginfo = "packed"
