[package]
name = "zccache-artifact"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Disk-backed artifact storage for zccache"


[dependencies]
redb = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
tempfile = { workspace = true }
zccache-core = { workspace = true }
zccache-hash = { workspace = true }
