[package]
name = "zccache-audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Durable audit schema types for zccache integrations"
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
