[package]
name = "zccache-ci"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CI tools for zccache (stop hook with process/thread dumping)"
publish = false

[dependencies]
md5 = "0.7"
serde_json = "1"
sysinfo = "0.33"
wait-timeout = "0.2"
