[package]
name = "zccache-compiler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true


[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }
zccache-core = { path = "../zccache-core" }
zccache-hash = { path = "../zccache-hash" }

[dev-dependencies]
tempfile = { workspace = true }
