[package]
name = "zccache-compiler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Compiler detection and argument parsing for zccache"


[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }
zccache-core = { workspace = true }
zccache-hash = { workspace = true }
clang = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
