[package]
name = "zccache-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Shared core types and utilities for zccache"


[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Native signal / structured-exception handler. Catches SIGSEGV/SIGABRT/SIGILL/
# etc. on Unix and SEH exceptions on Windows so a hard FFI crash still leaves
# a text dump under `<cache>/crashes/`. The daemon previously owned this dep
# directly; moving it to core means the CLI gets the same coverage with one
# `zccache_core::crash::install("zccache")` call from main.
crash-handler = "0.6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
